# esp32cam

./: .gitignore  CMakePresets.json  README.md  partitions.csv  sdkconfig
components/esp-dl/: idf_component.yml
components/esp-dl/include/math/: dl_math.hpp
main/: CMakeLists.txt  Kconfig.projbuild  app_camera.c  app_httpd.c  app_httpd.cpp  app_main.c  app_main.cpp  app_mdns.c  app_uart.c  app_wifi.c  idf_component.yml
main/include/: app_camera.h  app_httpd.h  app_mdns.h  app_uart.h
main/www/: compress_pages.sh  index_ov2640.html
